Fixed InaccessibleObjectException when running tooling API on JDK 17 (#189)